--- a/TradeAssistant.csproj
+++ b/TradeAssistant.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <Version>0.1.8</Version>
+    <TargetFramework>net7.0-windows</TargetFramework>
+    <LangVersion>9.0</LangVersion>
+    <Version>0.1.9</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eco.ReferenceAssemblies" Version="0.10.2.1-beta-release-647" />
-    <PackageReference Include="Fody" Version="6.8.0">
+    <PackageReference Include="Eco.ReferenceAssemblies" Version="0.11.0.6-beta-release-741" />
+    <PackageReference Include="Fody" Version="6.6.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
